<resources>
    <string name="app_name" translatable="false">Advanced PortChecker</string>
    <string name="string_logo" translatable="false">Logo</string>
    <string name="string_localhost" translatable="false">127.0.0.1</string>
    <string name="string_hint_one" translatable="false">1</string>
    <string name="string_port_from">From:</string>
    <string name="string_port_to">To:</string>
    <string name="string_scan">Scan</string>
    <string name="string_scan_cancelled">Scan cancelled!</string>
    <string name="string_scan_complete">Scan complete!</string>
    <string name="string_cancel_scan">Cancel</string>

    <string name="string_about">About</string>
    <string name="string_help">Help</string>
    <string name="text_about">Advanced PortChecker was created by DeadLine.\n\nThis application can be used to scan a host for open TCP ports. Please make sure that you have the appropriate permissions before scanning a host!\n\nImages by:\nGoogle\n\nTranslations:\n- Portuguese (Brazil) - <a href="https://github.com/SnwMds">SnwMds</a>\n\nCopyright © 2026 CodeDead</string>
    <string name="text_help">Advanced PortChecker is an application that you can use to scan a host for open/closed TCP ports. Please make sure that you have permission to scan a host before initiating the scan!\n\nA TCP port ranges from 1 to 65535.\nThe time-out is the time it takes before an active connection is closed. If your internet is slow and/or unresponsive, it is recommended to increase the time-out because your results might not be accurate.\n\nIf you happen to find a bug, you\'re welcome to send us an email!</string>
    <string name="text_send_mail">Send us a mail!</string>
    <string name="title_activity_settings">Advanced PortChecker - Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>

    <string name="string_keep_screen_on">Keep screen on</string>
    <string name="string_screenOn_hint">Recommended for large scans</string>
    <string name="string_display_timeouts">Display ports that have timed-out</string>
    <string name="string_display_closed">Display ports that are closed</string>
    <string name="string_socket_timeout">Socket time-out</string>
    <string name="string_vibrate_on_complete">Vibrate when scan has completed</string>
    <string name="string_socket_timeout_summary">The time it takes before a connection is marked as timed-out (ms)</string>
    <string name="string_give_manual_permissions">Would you like to manually give permissions?</string>
    <string name="string_networkpermissions_required">Network permissions are required in order to run this app!</string>
    <string name="string_enable_wifi">Would you like to enable wifi?</string>
    <string name="string_no_internet">You don\'t have an active network connection!</string>
    <string name="string_invalid_host">Please enter a valid host address!</string>
    <string name="string_invalid_startport">Please enter a valid start port!</string>
    <string name="string_invalid_endport">Please enter a valid end port!</string>
    <string name="string_endport_larger_than_startport">The end port cannot be smaller than the start port!</string>
    <string name="string_largest_possible_port">The largest possible port is 65535!</string>
    <string name="string_clear_output">Clear output</string>
    <string name="string_settings">Settings</string>
    <string name="string_exit">Exit</string>
    <string name="string_display_notification_scan_finished">Display scan notifications</string>
    <string name="string_display_scan_progress_notifications">Display scan progress notifications</string>
    <string name="string_notification_scan_complete">The scan has completed!</string>
    <string name="channel_description">Advanced PortChecker notifications</string>
    <string name="title_activity_about">Advanced PortChecker - About</string>
    <string name="alert_review_text">Please consider leaving a review if you like this app!</string>
    <string name="alert_review_never">Never</string>
    <string name="string_application_languages">Language</string>
    <string name="string_applanguage_summary">The display language for the app</string>
    <string name="string_timeout">TIMEOUT</string>
    <string name="string_closed">CLOSED</string>
    <string name="string_open">OPEN</string>
    <string name="asyncResponse_null_exception">AsyncResponse delegate cannot be null!</string>
    <string name="scanStatus_colorCoded">Scan status color coded</string>
    <string name="scanStatus_colorCoded_summary">The status of a port will be color coded</string>
    <string name="notifications_no_permissions">Notification permissions are required in order to send a message</string>
    <string name="scan_running">A scan is running</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string-array name="array_languages" translatable="false">
        <item>English</item>
        <item>Nederlands</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>Español</item>
        <item>Português (Brasil)</item>
    </string-array>

    <string-array name="array_languages_values" translatable="false">
        <item>en</item>
        <item>nl</item>
        <item>fr</item>
        <item>de</item>
        <item>es</item>
        <item>pt</item>
    </string-array>

</resources>
