<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:id="@+id/main"
    tools:context=".gui.activity.ScanActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/EdtHost"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/string_localhost"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="5dp"
                    android:text="@string/string_port_from"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/EdtStartPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/string_hint_one"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="5dp"
                    android:text="@string/string_port_to"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/EdtEndPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/string_hint_one"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/BtnScan"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/string_scan" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/EdtScanOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/bordered_edittext"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType=""
        android:padding="5dp"
        android:textIsSelectable="true"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <ProgressBar
        android:id="@+id/PgbScanProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:scaleY="3"
        android:visibility="gone" />

</LinearLayout>
